--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,3 +26,5 @@
 {% include hemline.html %}
 
 </html>
+
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
