--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -11,5 +11,7 @@
 {% for paper in site.data.publications.publications %}
     {% include single_paper.html %}
 {% endfor %}
+<p>&nbsp;</p>
+
 <!-- <p>---</p> -->
 
