--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -1,9 +1,10 @@
 <div class="content" >
 <!-- <h2> Publications <h2> -->
-<h2>Preprints</h2>
+    
+<!-- <h2>Preprints</h2>
 {% for paper in site.data.publications.pre_prints %}
     {% include single_paper.html %}
-{% endfor %}
+{% endfor %} -->
 
 
 <h2>Publications</h2>
